--- a/ios-pwd.html
+++ b/ios-pwd.html
@@ -4,22 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap" rel="stylesheet">
 
-  <title>Smiglo's funny stuff</title>
+  <title>IOS-like passwd generator</title>
 
-  <link rel="icon" type="image/png" href="images/favi-index.png">
+  <link rel="icon" type="image/png" href="images/favi-pwd.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="fira-mono-regular">
 
-  <p>very funny...</p>
-  <ul>
-    <li> <a href="ios-pwd.html">IOS-like passwd generator</a> </li>
-  </ul>
+<script src="js/ios-pwd.js"></script>
 
 </body>
 
