ios-pwd: clipboard support

--- a/ios-pwd.html
+++ b/ios-pwd.html
@@ -17,8 +17,9 @@
 
 <body class="fira-mono-regular">
 
-<script src="js/ios-pwd.js"></script>
-
+<body>
+    <h1>Password Generator</h1>
+    <script src="js/ios-pwd.js"></script>
 </body>
 
 </html>
