--- a/ios-pwd.html
+++ b/ios-pwd.html
@@ -19,7 +19,7 @@
 
 <body>
     <h1>Password Generator</h1>
-    <script src="js/ios-pwd.js"></script>
+    <script type="module" src="js/ios-pwd.mjs"></script>
 </body>
 
 </html>
