ios-pwd: refactor

--- a/ios-pwd.html
+++ b/ios-pwd.html
@@ -18,8 +18,11 @@
 <body class="fira-mono-regular">
 
 <body>
-    <h1>Password Generator</h1>
-    <script type="module" src="js/ios-pwd.mjs"></script>
+  <h1>Password Generator</h1>
+  <p id='prng-info'></p>
+  <ul id='pwd-list'></ul>
+
+  <script type="module" src="js/ios-pwd.mjs"></script>
 </body>
 
 </html>
