ios-pwd: numbered list

--- a/ios-pwd.html
+++ b/ios-pwd.html
@@ -21,8 +21,8 @@
 <body>
   <h1>Password Generator</h1>
 
-  <ul id="pwd-list">
-  </ul>
+  <ol id="pwd-list">
+  </ol>
 
   <p>Link: <span id="prng-info"></span></p>
 
