--- a/ios-pwd.html
+++ b/ios-pwd.html
@@ -13,13 +13,22 @@
 
   <link rel="icon" type="image/png" href="images/favi-pwd.png">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/dark-mode.css">
+  <link rel="stylesheet" href="css/light-mode.css">
 
 </head>
 
-<body class="fira-mono-regular">
-
-<body>
-  <h1>Password Generator</h1>
+<body class="fira-mono-regular dark-mode">
+  <div class="header-container">
+    <h1>Password Generator</h1>
+    <div class="theme-switch-wrapper">
+      <label class="theme-switch" for="themeCheckbox">
+        <input type="checkbox" id="themeCheckbox" checked>
+        <div class="slider round"></div>
+      </label>
+      <em>Dark</em>
+    </div>
+  </div>
 
   <ol id="pwd-list">
   </ol>
