--- a/ios-pwd.html
+++ b/ios-pwd.html
@@ -33,28 +33,33 @@
   <ol id="pwd-list">
   </ol>
 
-  <p>Link: <span id="prng-info"></span></p>
+  <div class="link-button-container">
+    <button id="generateButton" class="circle-button">
+    </button>
+    <p>Link: <span id="prng-info"></span></p>
+  </div>
 
-  <button id="generateButton">Generate</button>
-  <div>
-    <label for="phraseInput">phrase:</label>
-    <input type="text" id="phraseInput" value="">
-  </div>
-  <div>
-    <label for="minInput">start:</label>
-    <input type="number" id="minInput" value="0">
-  </div>
-  <div>
-    <label for="countInput">count:</label>
-    <input type="number" id="countInput" value="0">
-  </div>
-  <div>
-    <label for="segmentsInput">segments:</label>
-    <input type="number" id="segmentsInput" value="0">
-  </div>
-  <div>
-    <label for="seglenInput">segment-len:</label>
-    <input type="number" id="seglenInput" value="0">
+  <div class="input-container">
+    <div>
+      <label for="phraseInput">phrase:</label>
+      <input type="text" id="phraseInput" value="">
+    </div>
+    <div>
+      <label for="minInput">start:</label>
+      <input type="number" id="minInput" value="0">
+    </div>
+    <div>
+      <label for="countInput">count:</label>
+      <input type="number" id="countInput" value="0">
+    </div>
+    <div>
+      <label for="segmentsInput">segments:</label>
+      <input type="number" id="segmentsInput" value="0">
+    </div>
+    <div>
+      <label for="seglenInput">segment-len:</label>
+      <input type="number" id="seglenInput" value="0">
+    </div>
   </div>
 
   <script type="module" src="js/ios-pwd.mjs"></script>
