ios-pwd: change layout, cleaning

--- a/ios-pwd.html
+++ b/ios-pwd.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap" rel="stylesheet">
 
   <title>IOS-like passwd generator</title>
@@ -21,13 +21,6 @@
 <body class="fira-mono-regular dark-mode">
   <div class="header-container">
     <h1>Password Generator</h1>
-    <div class="theme-switch-wrapper">
-      <label class="theme-switch" for="themeCheckbox">
-        <input type="checkbox" id="themeCheckbox" checked>
-        <div class="slider round"></div>
-      </label>
-      <em>Dark</em>
-    </div>
   </div>
 
   <ol id="pwd-list">
@@ -60,6 +53,14 @@
       <label for="seglenInput">segment-len:</label>
       <input type="number" id="seglenInput" value="0">
     </div>
+  </div>
+
+  <div class="theme-switch-wrapper">
+    <label class="theme-switch" for="themeCheckbox">
+      <input type="checkbox" id="themeCheckbox" checked>
+      <div class="slider round"></div>
+    </label>
+    <em>Dark</em>
   </div>
 
   <script type="module" src="js/ios-pwd.mjs"></script>
