--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
   <link rel="icon" type="image/png" href="images/favi-index.png">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/dark-mode.css">
+  <link rel="stylesheet" href="css/light-mode.css">
 </head>
 
-<body class="fira-mono-regular">
+<body class="fira-mono-regular dark-mode">
 
   <p>very funny...</p>
   <ul>
