ios-pwd: change link to link

--- a/ios-pwd.html
+++ b/ios-pwd.html
@@ -29,7 +29,7 @@
   <div class="link-button-container">
     <button id="generateButton" class="circle-button">
     </button>
-    <p>Link: <span id="prng-info"></span></p>
+    <p><a href id="prng-info">link</a></p>
   </div>
 
   <div class="input-container">
