--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <p>very funny...</p>
   <ul>
     <li> <a href="ios-pwd.html">IOS-like passwd generator</a> </li>
+    <li> <a href="dough.html">Dough calculator</a> </li>
   </ul>
 
 </body>
