dough: add list of ingredients

--- a/dough.html
+++ b/dough.html
@@ -125,41 +125,8 @@
         <input type="text" id="saltPercentage" class="percentage-input" readonly tabindex="-1">
       </div>
     </div>
-    <div class="input-container">
-      <div>
-        <label for="seedsInput">Seeds:</label>
-        <input type="number" id="seedsInput" value="0" class="value-input">
-        <input type="text" id="seedsPercentage" class="percentage-input" readonly tabindex="-1">
-      </div>
-    </div>
-    <div class="input-container">
-      <div>
-        <label for="glutenInput">Gluten:</label>
-        <input type="number" id="glutenInput" value="0" class="value-input">
-        <input type="text" id="glutenPercentage" class="percentage-input" readonly tabindex="-1">
-      </div>
-    </div>
-    <div class="input-container">
-      <div>
-        <label for="maltInput">Malt:</label>
-        <input type="number" id="maltInput" value="0" class="value-input">
-        <input type="text" id="maltPercentage" class="percentage-input" readonly tabindex="-1">
-      </div>
-    </div>
-    <div class="input-container">
-      <div>
-        <label for="molassesInput">Molasses:</label>
-        <input type="number" id="molassesInput" value="0" class="value-input">
-        <input type="text" id="molassesPercentage" class="percentage-input" readonly tabindex="-1">
-      </div>
-    </div>
-    <div class="input-container">
-      <div>
-        <label for="oilInput">Oil:</label>
-        <input type="number" id="oilInput" value="0" class="value-input">
-        <input type="text" id="oilPercentage" class="percentage-input" readonly tabindex="-1">
-      </div>
-    </div>
+    <div id="other-ingredients-container"></div>
+    <div id="add-other-ingredient-wrapper"></div>
   </div>
 
   <div class="toggle-container">
