dough: ui update

--- a/dough.html
+++ b/dough.html
@@ -34,11 +34,11 @@
   </div>
 
   <div class="toggle-container">
+    <em class="theme-label">Sourdough</em>
     <label class="theme-switch" for="sourdoughCheckbox">
       <input type="checkbox" id="sourdoughCheckbox">
       <div class="slider round"></div>
     </label>
-    <em class="theme-label">Sourdough</em>
   </div>
 
   <div id="sourdough-section" style="display: none;">
@@ -67,11 +67,11 @@
   </div>
   
   <div class="toggle-container">
+    <em class="theme-label">Preferment</em>
     <label class="theme-switch" for="prefermentCheckbox">
       <input type="checkbox" id="prefermentCheckbox">
       <div class="slider round"></div>
     </label>
-    <em class="theme-label">Preferment</em>
   </div>
 
   <div id="preferment-section" style="display: none;">
@@ -99,7 +99,6 @@
   </div>
 
   <div class="toggle-container">
-    <span class="switch-placeholder"></span>
     <em class="theme-label">Dough</em>
   </div>
 
@@ -130,7 +129,6 @@
   </div>
 
   <div class="toggle-container">
-    <span class="switch-placeholder"></span>
     <em class="theme-label">Hydration</em>
   </div>
 
@@ -152,7 +150,6 @@
   </div>
 
   <div class="toggle-container">
-    <span class="switch-placeholder"></span>
     <em class="theme-label">Summary</em>
   </div>
 
@@ -173,27 +170,27 @@
   </div>
 
   <div class="toggle-container">
+    <em class="theme-label">Recipe Data</em>
     <label class="theme-switch" for="recipeDataCheckbox">
       <input type="checkbox" id="recipeDataCheckbox">
       <div class="slider round"></div>
     </label>
-    <em class="theme-label">Recipe Data</em>
   </div>
 
   <div id="recipe-data-section" style="display: none;">
-    <textarea id="recipeJsonOutput" tabindex="-1"></textarea>
-    <button id="loadRecipeButton" class="load-btn">Load from Text</button>
     <button id="saveRecipeButton" class="load-btn">Save Recipe</button>
     <ul id="saved-recipes-list"></ul>
+    <textarea id="recipeJsonOutput" tabindex="-1"></textarea>
+    <button id="loadRecipeButton" class="load-btn">Load from Text</button>
   </div>
 
 
-  <div class="theme-switch-wrapper">
+  <div class="toggle-container">
+    <em class="theme-label">Dark</em>
     <label class="theme-switch" for="themeCheckbox">
       <input type="checkbox" id="themeCheckbox" checked>
       <div class="slider round"></div>
     </label>
-    <em class="theme-label">Dark</em>
   </div>
 
 </body>
