dough: fix label

--- a/dough.html
+++ b/dough.html
@@ -142,7 +142,7 @@
     </div>
     <div class="input-container">
       <div>
-        <label for="hydrationWeightInput">Hydration:</label>
+        <label for="hydrationWeightInput">Add. water:</label>
         <input type="number" id="hydrationWeightInput" class="value-input" readonly tabindex="-1">
         <input type="number" id="hydrationPercentageInput" value="65" class="percentage-input">
       </div>
