dough: clear form

--- a/dough.html
+++ b/dough.html
@@ -65,7 +65,7 @@
       </div>
     </div>
   </div>
-  
+
   <div class="toggle-container">
     <em class="theme-label">Preferment</em>
     <label class="theme-switch" for="prefermentCheckbox">
@@ -179,6 +179,7 @@
 
   <div id="recipe-data-section" style="display: none;">
     <button id="saveRecipeButton" class="load-btn">Save Recipe</button>
+    <button id="clearRecipeButton" class="load-btn">Clear Recipe</button>
     <ul id="saved-recipes-list"></ul>
     <textarea id="recipeJsonOutput" tabindex="-1"></textarea>
     <button id="loadRecipeButton" class="load-btn">Load from Text</button>
